--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Ucapan Selamat Datang</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to right, #1f4037, #99f2c8);
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      text-align: center;
+    }
+    h1 {
+      font-size: 3rem;
+      margin-bottom: 0.5em;
+    }
+    p {
+      font-size: 1.5rem;
+      max-width: 600px;
+    }
+    .button {
+      margin-top: 2em;
+      padding: 10px 20px;
+      font-size: 1rem;
+      color: #1f4037;
+      background-color: #fff;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    .button:hover {
+      background-color: #e0e0e0;
+    }
+  </style>
+</head>
+<body>
+  <h1>👋 Halo, Selamat Datang!</h1>
+  <p>Terima kasih telah mengunjungi repositori GitHub saya. Di sini kamu akan menemukan berbagai proyek, eksperimen, dan ide menarik. Jangan ragu untuk menjelajahi dan memberikan masukan!</p>
+  <a href="https://github.com/username" target="_blank">
+    <button class="button">Kunjungi Profil Saya</button>
+  </a>
+</body>
+</html>
 
