--- a/index.html
+++ b/index.html
@@ -44,9 +44,14 @@
 <body>
   <h1>👋 Halo, Selamat Datang!</h1>
   <p>Terima kasih telah mengunjungi repositori GitHub saya. Di sini kamu akan menemukan berbagai proyek, eksperimen, dan ide menarik. Jangan ragu untuk menjelajahi dan memberikan masukan!</p>
-  <a href="https://github.com/username" target="_blank">
+  <a href="https://github.com/mamadcreative" target="_blank">
     <button class="button">Kunjungi Profil Saya</button>
   </a>
+
+  <!-- Musik latar -->
+  <audio autoplay loop>
+    <source src="music.mp3" type="audio/mpeg">
+    Browser kamu tidak mendukung audio 😢
+  </audio>
 </body>
 </html>
-
