--- a/index.html
+++ b/index.html
@@ -66,11 +66,18 @@
       box-shadow: 0 0 20px #ff9aff;
     }
 
+    .pin-input-container {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+    }
+
     input {
       padding: 12px;
-      font-size: 1.2rem;
-      margin-bottom: 1em;
-      width: 100%;
+      font-size: 1.5rem;
+      text-align: center;
+      width: 50px;
+      height: 50px;
       border-radius: 8px;
       border: none;
       background-color: #fff;
@@ -155,13 +162,14 @@
     <div class="pin-box">
       <h2>Masukkan Kode Rahasia 🎁</h2>
       <p>Untuk membuka kado ulang tahun 🎂</p>
-      <input 
-        type="password" 
-        id="pinInput" 
-        placeholder="Masukkan PIN" 
-        maxlength="8" 
-        oninput="limitInputLength(this)" 
-      />
+      <div class="pin-input-container">
+        <input type="text" id="pin1" maxlength="1" oninput="moveFocus('pin1', 'pin2')" />
+        <input type="text" id="pin2" maxlength="1" oninput="moveFocus('pin2', 'pin3')" />
+        <input type="text" id="pin3" maxlength="1" oninput="moveFocus('pin3', 'pin4')" />
+        <input type="text" id="pin4" maxlength="1" oninput="moveFocus('pin4', 'pin5')" />
+        <input type="text" id="pin5" maxlength="1" oninput="moveFocus('pin5', 'pin6')" />
+        <input type="text" id="pin6" maxlength="1" oninput="moveFocus('pin6', null)" />
+      </div>
       <br />
       <button onclick="checkPin()">Buka</button>
       <div class="error" id="pinError"></div>
@@ -231,8 +239,11 @@
       }, 4500);
     });
 
-    function limitInputLength(input) {
-      input.value = input.value.replace(/[^0-9]/g, '').slice(0, 8);
+    function moveFocus(currentId, nextId) {
+      const currentInput = document.getElementById(currentId);
+      if (currentInput.value.length === currentInput.maxLength && nextId) {
+        document.getElementById(nextId).focus();
+      }
 
       // Hanya mainkan suara saat ketik PIN
       const typeSound = document.getElementById("typeSound");
@@ -241,7 +252,13 @@
     }
 
     function checkPin() {
-      const pin = document.getElementById('pinInput').value;
+      const pin = document.getElementById('pin1').value +
+                  document.getElementById('pin2').value +
+                  document.getElementById('pin3').value +
+                  document.getElementById('pin4').value +
+                  document.getElementById('pin5').value +
+                  document.getElementById('pin6').value;
+
       const error = document.getElementById('pinError');
       if (pin === '180404') {
         document.getElementById('pinScreen').style.display = 'none';
